[api] Add optional linear interpolation for the reference measurement 	modified:   api.py 	modified:   config.py 	modified:   plots.py 	modified:   swagger.yml 	modified:   ../requirements.txt 	(new file:  ds_load.py - coming up a new way of loading data)
